<resources>
    <string name="app_name">MyApp</string>
    <string name="button_mian_1">百科</string>
    <string name="button_main_2">菜单</string>
    <string name="button_main_3">关于</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="SPAN_TXET" />
    <string name="main_button">搜索</string>
    <string name="menu_1">搜索</string>
    <string name="item_add">add</string>
    <string name="About_Text">关于</string>
    <string name="About_Text2">地区</string>
    <string name="About_Text3">中国广东</string>
    <string name="About_Text4">给我们评分</string>
    <string name="About_Text5">加入我们</string>
    <string name="About_Button1"></string>
    <string name="about_button3">关于我们</string>
    <string name="about_button4">用户隐私协议</string>
    <string name="USER_1">\n\n\n\n\n\n本协议为您与本APP(下称本APP)版权所有者之间所订立的契约，具有合同的法律效力，请您仔细阅读。\n\n\n 一、本协议内容包括协议正文及所有本 APP 已经发布的或将来可能发布的各类规则。所有规则均为本协议不可分割的组成部分，与协议正文具有同等法律效力,请您仔细阅读后再决定是否使用本APP。如您不同意相关变更，应当立即停止使用本 APP 平台服务；如您继续使用本 APP 平台服务，即表明您接受修订后的协议和规则。\n\n 二、本 APP 平台所刊载的所有资料仅供参考使用。用户明确同意其使用本 APP 平台网络服务所存在的风险将完全由其自己承担；因其使用本 APP 平台网络服务而产生的一切后果也由其自己承担，本 APP 平台对用户不承担任何责任。\n\n 三、本 APP 平台的用户提供的个人资料，如：您的姓名、性别、年龄、出生日期、身份证号、家庭住址、教育程度、公司情况、所属行业等。我们在未经您同意的情况下，绝对不会将您的任何资料以任何方式泄露给任何第三方。\n\n 四、当政府司法机关依照法定程序要求本 APP 平台披露个人资料时，我们将根据执法单位的要求或为了公共安全提供个人资料。在此情况下的任何披露，本 APP 平台均免责。\n\n 五、 任何由于黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营的不可抗力而造成的个人资料泄露、丢失、被盗用或被窜改等，本 APP 平台均免责。\n\n 六、由于与本 APP 平台链接的其它网站所造成之个人资料泄露及由此而导致的任何法律争议和后果，本 APP 平台均免责。\n\n 七、本 APP 平台如因系统维护或升级而需暂停服务时，将事先公告。若因线路及非本网站控制范围外的硬件故障或其它不可抗力而导致暂停服务，于暂停服务期间造成的一切不予损失，本 APP 平台不负任何责任。\n\n 八、本 APP 平台使用者因为违反本声明的规定而触犯中华人民共和国法律的，一切后果自负，本 APP 平台不承担任何责任。\n\n 九、凡以任何方式登陆本 APP 平台或直接、间接使用本 APP 平台资料者，均视为自愿接受本 APP 平台声明的约束。\n\n 十、本声明未涉及的问题参见国家有关法律法规，当本声明与国家法律法规冲突时，以国家法律法规为准。\n\n 十一、本 APP 平台不担保网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。\n\n 十二、本 APP 平台不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于外部链接指向的不由本 APP 平台实际控制的任何网页或平台上的内容，本 APP 平台不承担任何责任。\n\n 十三、对于因不可抗力或本 APP 平台不能控制的原因造成的网络服务中断或其它缺陷，本 APP 平台不承担任何责任，但我们将尽力减少因此而给用户造成的损失和影响。\n\n 十四、本 APP 平台所有页面的版式、图片版权均为本 APP 平台所有，未经授权，不得用于除本 APP 平台之外的任何站点。\n\n 十五、本 APP 平台的声明以及其修改权、更新权及最终解释权均属本 APP 平台所有。\n\n </string>
    <string name="UserView">图片</string>
    <string name="UserText">用户隐私与协议</string>
    <string name="PingFen_Text">对我们评分</string>
    <string name="rb1">没人比你们优秀</string>
    <string name="rb2">你们好厉害哦</string>
    <string name="rb3">还可以吧</string>
    <string name="rb4">不太行哦</string>
    <string name="rb5">别人都比你们优秀</string>
    <string name="PingFen_Button">提交并返回</string>
    <string name="g_text_1">地址：\n广东省奥利市奥利县奥利乡奥利给村奥利路88号</string>
    <string name="g_text_2">联系电话：\n18819898988</string>
    <string name="g_text_3">邮箱：\naoligei@niubi.com</string>
    <string name="ADDBUTTON">返回</string>
    <string name="AboutUs_text">关于我们</string>
    <string name="AboutUs_text2">\n\n组名：奥利给\n\n组内成员：李羲超、黄慧妍、李佳琪\n\n成员班别：180804班\n\n成员概况：组长 黄慧妍；主程 李羲超；协助 李佳琪</string>
    <string name="AboutUs_button">返回</string>
    <string name="AddUs_Text">加入我们</string>
    <string name="hint_main">请输入星座</string>
    <string name="Main_Text_1">主页</string>
    <string name="Caidan_Text">菜单</string>
    <string name="Caidan_button_1">我是什么星座？</string>
    <string name="Caidan_button2">我是什么性格？</string>
    <string name="Caidan_button3">哪些星座与我匹配？</string>
    <string name="Frist_Text">星\n座\n解\n谜\n大\n师</string>
    <string name="brisday">请选择你的生日</string>
    <string name="find_button">确定</string>
    <string name="about_date">1.0.1</string>
    <string name="findedlayout_appbarimage">背景图</string>
    <string name="findlayout_text" />
    <string name="home_text">星座百科</string>
    <string name="appbar_image">tupian</string>
    <string name="toot_text">星座百科</string>
    <string name="toor_1" />
    <string name="home_text1">\n二千多年前希腊的天文学家希巴克斯\(Hipparchus，西元前190～120\)为标示太阳在黄道上观行的位置，就将黄道带分成十二个区段，以春分点为0°，自春分点（即黄道零度）算起，每隔30° 为一宫。\n\n并以当时各宫内所包含的主要星座来命名，依次为白羊、金牛、双子、巨蟹、狮子、室女、天秤、天蝎、人马、摩羯、宝瓶、双鱼等宫，称之为黄道十二宫 。总计为十二个星群。在地球运转到每个等份（星群）时所出生的婴儿，长大后总有若干相似的特征，包括行为特质等。\n\n将这些联想（丰富的想像和创造力）串联起来，便使这些星群人性的具像化了；又加入神话的色彩，成为文化（主要指希腊和罗马神话）的重要部份。这套命理演进、流传至今至少五千年的历史，它们以这十二个星座为代表。\n\n\n\n\n</string>
    <string name="findedtext0">FindedText0</string>
    <string name="Ftext" />
    <string name="baiyang">白羊座的符号象征羊的头，是一种象形的方法，取出羊最明显的羊角和鼻梁部分；由白羊座的神话可以联想到一些特质，例如冲动、喜欢自由、勇往直前。而由另一方面，也有人指白羊座的符号是象征新生的绿芽，表现出新生和欣欣向荣的景象。\n\n百科：\n\t白羊座—Aries，又名牡羊座，为黄道十二星座的第一个星座，守护星为火星，位于黄道0度起到30度前的区间，相对星座为天秤座。</string>
    <string name="jinniu">金牛座的符号象征了牛的头，也是以简单的线条描绘出牛的形象；由金牛座的神话可以发现，金牛座的外表温驯，但内心充满欲望。由另一方面看，圆圆的牛脸表现出安逸和享乐，但上面的牛角则提示我们脾气有爆发的时候。\n\n百科：\n\t金牛座—Taurus，黄道十二星座的第二个星座，守护星为金星，位于黄道30度起至60度前的区间，相对星座为天蝎座。</string>
    <string name="chunv">处女座的符号象征女性的生殖器；但如果你注意看右半边，就可以发现。处女座的神话中，可看出收成的意涵。由处女去联想处女座的特质，也可以发现一些，如小心、谨慎、沈静和羞怯。由另一方面，处女也代表了安静和敏锐。\n\n百科：\n\t处女座—Virgo，又名室女座。黄道十二星座的第六个星座,守护星为水星，位于黄道150度起至180度前的区间，相对星座为双鱼座。</string>
    <string name="shaungzi">双子座的符号象征双胞胎，相较于前两个符号，就比较抽象了一点；由双子座的神话可以知道双子座的二元性和内在的矛盾。其实双子座所代表的不只是二元性，而是所谓的多元，一方面可以看出其广，一方面也暗示了可能的肤浅。\n\n百科：\n\t双子座—Gemini，黄道十二星座的第三个星座，守护星为水星，位于黄道60度起到90度前的区间，相对星座为射手座。</string>
    <string name="shuangyu">双鱼座的符号象征两条鱼，而其中有一条丝带将它们联系在一起；由双鱼座的神话中可以联想到双鱼座逃避的特质。双鱼座的两条鱼是分别游向两个方向，除了表现出双鱼座的二元性之外，也象征了双鱼座的矛盾和复杂。\n\n百科：\n\t双鱼座—Pisces，黄道十二星座的第十二个星座，守护星为海王星，位于黄道330度起到0度前的区间，相对星座为处女座。</string>
    <string name="juxie">巨蟹座的符号象征胸，也就是说明了巨蟹和胸有关；由巨蟹座的神话可以想像，有一种家的感觉，同时也和忌妒有关。另一方面也有人指出，其实巨蟹座的符号是象征巨蟹的甲壳，由此也可看出巨蟹座所具自我保护特质，和隐藏的习惯。\n\n百科：\n\t巨蟹座—Cancer，是黄道十二星座的第四个星座，守护星为月亮，位于黄道90度起到120度前的区间，相对星座为摩羯座。</string>
    <string name="shizi">狮子座的符号象征狮子的尾巴，充分显示了狮子座的个性；由狮子座的神话可以联想到，狮子座的风流与热情。由狮子去联想狮子座的特性，很容易就可以想到很多，热情、同情心，但是别忘了，母狮子才是出外狩猎的。\n\n百科：\n\t狮子座—Leo，黄道十二星座的第五个星座，守护星为太阳，位于黄道120度起至150度前的区间，相对星座为水瓶座。</string>
    <string name="tiancheng">天秤座的符号象征一杆秤子，希腊字母Ω代表了衡量，而下面的“-”则代表了衡量的基础。在天秤座的神话中可以看出天秤座公平的特质。但由那一杆秤子，可以看出天秤座追求平衡的基本念头，同时，摇摆不定的秤子也表现出天秤座的犹豫不决。\n\n百科：\n\t天秤座—Libra，黄道十二星座的第七个星座，守护星为金星，位于黄道180度起至210度前的区间。</string>
    <string name="tianxie">天蝎座的符号象征男性的生殖器；由天蝎座的神话中，可以知道天蝎座是忌妒的来源。由男性生殖器可以知道天蝎座对性的欲望，另一方面，也有人认为天蝎座的符号是象征蝎子的甲壳和毒针，表现出复仇的特质。\n\n百科：\n\t天蝎座—Scorpio，黄道十二星座的第八个星座，守护星为冥王星、火星，位于黄道210度起至240度前的区间。</string>
    <string name="sheshou">射手座的符号象征是射手手中的箭，回到象形的形式；由射手座的神话可以看出射手座的智慧和对知识的追求。射手的原型是拿弓箭的人马，下半身的马象征着对理想的追求，上半身的人象征知识和智慧，而手中的箭，则表现出射手座对精神层次追求的一面。\n\n百科：\n\t射手座—Sagittarius，又称人马座。黄道十二星座的第九个星座，守护星为木星，位于黄道240度起至270度前的区间。</string>
    <string name="mojie">摩羯座的符象征羊的头和鱼的尾，抽象但基本上是象形的；由摩羯座的神话我们可以知道摩羯的担心和恐惧。摩羯座又称山羊座，这是由于其上半身的山羊形象所致，有一种向上登峰的欲求，但别忘了，在水面之下摩羯座也有象征感情的鱼尾。\n\n百科：\n\t摩羯座—Capricorn，又名山羊座，黄道十二星座的第十个星座，守护星为土星，位于黄道270度起到300度前的区间。</string>
    <string name="shuiping">水瓶座的符号象征水和空气的波，是具象但又抽象的；由水瓶座的神话中，可以看出水瓶座的爱好自由和个人主义。象征水瓶座的波，是高度知性的代表，由波的特性去思考水瓶座的特质，看似有规律但没有具体的形象，是一个不可预测的星座。\n\n百科：\n\t水瓶座—Aquarius，又名宝瓶座，黄道十二星座的第十一个星座，守护星为天王星，位于黄道300度起到330度前的区间，相对星座为狮子座。</string>
    <string name="fb">返回</string>
    <string name="what_text1">我是什么性格</string>
    <string name="what_text2">请选择您的星座：</string>
    <string name="what_text" />
    <string name="wb1">确定</string>
    <string name="wb2">返回</string>
    <string name="pshuiping">\n第一名：双子座
　　\n配对指数：100
　　\n配对比重：48:52
　　\n两情相悦：100
　　\n天长地久：100
　　\n友情：★★★★★
　　\n爱情：★★★★★
　　\n婚姻：★★★★
　　\n亲情：★★★★★
　　\n综合评述：两情相悦
　　\n水瓶男VS双子女：
　　\n双子座和水瓶座同为风向星座，是一对非常来电的星座情侣，双子座灵活多变思维敏捷，水瓶男自由开放，两者对新鲜事物的接受力都很强，这两个星座一旦碰撞到一起，就是天雷勾地火，收都收不住。他们两人在认识的初期非常容易来电，总能在最短时间内找到共同的话题和兴趣爱好，上至天文下至地理，无所不谈，相见恨晚，聊起天来根本停不下来。在交谈过程中，双方都会被对方的幽默所逗笑，双子女说话风趣幽默、思维敏捷可以轻松跟得上水瓶座男跳跃的思维，两个星座宫位很近，很容易沟通。
　　\n水瓶女VS双子男：
　　\n双子座男生最不喜欢看到眼泪。情人的指责和唠叨，对双子们来说都能接受，唯有她们生气流泪会令双子们无法忍受。因为眼泪和哭声总是和痛苦联系在一起，为了避免痛苦，双子们会努力发挥自己的幽默，使生活变得美好一点。但这样的生活，使双子们的情绪不断地起伏，昨天他们对什么都充满信心，今天又对什么都不理不睬。人们常会因此而嗔怪他们，但只有水瓶们能理解他们，能看见他们笑容背后的忧虑，知道他们有多么害怕面对生活中一切消极的事物。水瓶座女生年轻时会很坦率地向所爱的人伸出双手，甚至去追逐他们的身影。但待到稍微成熟后，她们会慢慢学会用冷淡去掩饰自己的心动，只是少女时代的纯情始终深埋在她们心里。如果她们在年长些时碰上双子座的男生，她们就能较成功地实现纯情之梦。因为双子座男生是长不大的孩子，他们对任何人和事往往都只朝好的方面看，所以当双子男生爱上水瓶后，会很坦然地接受女方的执着和坦诚。
　　
\n\n第二名：天秤座
　　\n配对指数：100
　　\n配对比重：52：48
　　\n两情相悦：100
　　\n天长地久：80
　　\n友情：★★★★★
　　\n爱情：★★★★★
　　\n婚姻：★★★★
　　\n亲情：★★★★★
　　\n综合评述：两情相悦
　　\n水瓶男VS天秤女：
　　\n水瓶座和天秤座同为风象星座，同样会给人忽冷忽热、变化莫测的感觉，但是那种感觉并不完全一样，那样既相似又不尽相同的性格会使他们能够很好地产生互动和默契。在交往过程中，水瓶男会欣赏于天秤女追求公正的性格，天秤女则会欣赏于水瓶男博爱、富有同情心、富有人道主义的精神。他们同样喜爱音乐鉴赏，是一个可以互相欣赏的组合。在恋爱中，天秤女讨厌冲突和矛盾，追求和谐，水瓶男追求理想主义、世界大同，虽然极富个性和支配欲的水瓶座，可能会试图去支配控制天秤女，但两者在价值观上是殊途同归的。
　　\n水瓶女VS天秤男：
　　\n水瓶女追求精神上的零束缚，喜欢随心所欲，似乎没有任何一个人或者一件事可以完全占有她们，他们是个只为了自己而活的姑娘。同时，水瓶女有自己的生活原则和生活方式，不受传统思想的束缚。和别的女生相比，恋爱中的水瓶女的确不太粘人而且不拜金，她们不愿意占有谁，对金钱地位这些世俗的东西也看得很淡薄，这使天秤男与她们相处起来十分愉快。
　　
\n\n第三名：射手座
　　\n配对指数：100
　　\n配对比重：42：58
　　\n两情相悦：100
　　\n天长地久：80
　　\n友情：★★★★★
　　\n爱情：★★★★★
　　\n婚姻：★★★★
　　\n亲情：★★★★
　　\n综合评述：两情相悦
　　\n水瓶男VS射手女：
　　\n属于火象星座的射手座与属于风象星座的水瓶座，火象与风象性质相近，他们的搭配是个很理想的组合。射手座追求自由和独立的人生观，这点与水瓶座十分相似，和射手座谈恋爱完全不用担心对方会一直粘着自己，人家有自己的生活，有自己的娱乐，这对于不喜欢痴缠类型的恋人的水瓶座来说，射手座恋人十分适合他们。射手座女生十分开朗、勇敢和诚实这让水瓶男十分喜欢。嫉恶如仇、直言快语的射手座女生也很喜欢水瓶男思想先进，变革的特质。水瓶男和射手女同样人缘很好，有自己各自的交际圈，通常各自生活充满了趣味。
　　\n水瓶女VS射手男：
　　\n射手男和水瓶女是自得其乐的一对情侣。射手和水瓶最讨厌痴缠型的伴侣，他们都不喜欢无变化的生活，他们的生活圈子广泛而有趣，如果要他们吃力地浪费时间去照顾另一半，他们宁愿选择放弃。水瓶女身上有着固执的易变性或易变的固执性，她们是女性化的，柔弱的。射手男的不确定性，都能使两人能够更好地处理感情波动。在生活中，射手们有点鲁莽，水瓶们则显得冷静而善于逻辑分析。当他们发火时，她们的轻轻触摸完全能够平息他们的怒气，如果两人彼此真心相爱，这一招将会非常神奇地灵验。</string>
    <string name="pshuangyu">\n第一名：巨蟹座
　　\n配对指数：100
　　\n配对比重：48:52
　　\n两情相悦：100
　　\n天长地久：100
　　\n友情：★★★★
　　\n爱情：★★★★★
　　\n婚姻：★★★★
　　\n亲情：★★★★★
　　\n综合评述：两情相悦
　　\n双鱼男VS巨蟹女：
　　\n双鱼座与巨蟹座同为水象星座，受其影响，他们都很注重感情的交流和波动，对于感情的感受力也很强，同样都将爱视若珍宝，对于安全感的渴求会让他们非常注重给对方安全感。从恋爱观上看，巨蟹重视稳定和实际的爱情，双鱼要求全心全意的照顾和爱情。两人性格相投，生活方式一致。很容易产生一见倾心的情况。双鱼男和巨蟹女有个共同的点，就是懂得体贴人、善解人意，他们会是非常默契的一对。
　　\n双鱼女VS巨蟹男：
　　\n双鱼座的女生是典型的小女生，天真烂漫爱幻想，对生活充满期待，但缺乏应对的能力。她们的存在是为了满足那些大男子主义。她们希望自己能够一直被当成小女孩，永远都天真浪漫。而在感情中，巨蟹会变得善妒且占有欲强，一反平时给大众温柔的形象。同为水象星座，双鱼和巨蟹会十分有默契，彼此心照不宣，能够和谐相处。
　　
\n\n第二名：天蝎座
　　\n配对指数：100
　　\n配对比重：52:48
　　\n两情相悦：80
　　\n天长地久：40
　　\n友情：★★★★
　　\n爱情：★★★★★
　　\n婚姻：★★★★★
　　\n亲情：★★★★★
　　\n综合评述：两情相悦
　　\n双鱼男VS天蝎女：
　　\n同为水象星座的双鱼男和天蝎女都是十分重情的人，两人内心都敏感多情，是所有星座搭配中最适合的一对。天蝎女强势，双鱼男弱势，你们一刚一柔结合在一起刚好互补。双鱼男温柔体贴、浪漫多情、自我牺牲的奉献精神是专情独占欲强的天蝎女所需要的。这两个星座在一起谈恋爱就真的是为了爱情而谈恋爱，不掺杂其他的东西。两人虽然观点不同却总是能相互理解，比较容易接受彼此。
　　\n双鱼女VS天蝎男：
　　\n在两人最初相遇时，往往都有相见恨晚的感觉。天蝎男在情爱之中的霸者地位，配合起双鱼女的温柔贤惠，不敢抗拒，甘心认命，正是天造地设的一对。两人戏剧化的情绪起伏，也令在感情生活中充满戏剧性，双鱼和天蝎的恋爱可谓烟火一样，灿烂迷人。
　　
\n\n第三名：金牛座
　　\n配对指数：90
　　\n配对比重：44:56
　　\n两情相悦：100
　　\n天长地久：100
　　\n友情：★★★
　　\n爱情：★★★
　　\n婚姻：★★★★
　　\n亲情：★★★★
　　\n综合评述：来电十足
　　\n双鱼男VS金牛女：
　　\n梦幻多情的双鱼座和坚韧踏实的金牛座在一起实际上是十分互补的。双鱼座浪漫有情调，富有艺术家的气息。这填补了实际沉稳的金牛座因为过于实际产生的感情空缺，金牛座的踏实稳重也可以让整天爱做梦的双鱼避免迷糊梦幻。金牛座和双鱼座都是个性不是很浓烈的阴性星座，相处通常是以温和的形式来进行，所以双方不会给对方太多的压力。金牛座是不擅长表达自己的星座，她们对另一半的感情通常是体现在生活的处处细节当中，敏感的双鱼座很容易被她们所感动。双鱼座那种愿意牺牲自己的情怀也深深地打动着金牛座。
　　\n双鱼女VS金牛男：
　　\n金牛男务实，他们大多不懂得使用浪漫的手段，也不会制造惊喜，但却能在生活中给予双鱼关心与帮助。在感情中，金牛的占有欲会变得比较强，但也说明金牛能够在更加细节的方面照顾到小女生的双鱼。双鱼女对于金牛男在爱情中的占有欲的理解是自己被满满的爱包围。大家都能享受爱情的美好。
</string>
    <string name="endtext1">哪些星座与我匹配</string>
    <string name="endtext2">请选择您的星座：</string>
    <string name="endtext3" />
    <string name="endbutton1">确定</string>
    <string name="endbutton2" >返回</string>
</resources>